--- a/TRAVELANGGRAPH_API/environment.yml
+++ b/TRAVELANGGRAPH_API/environment.yml
@@ -5,7 +5,8 @@ channels:
 dependencies:
   - python=3.11
   - pip
-  - pip:
+      - pip:
     - fastapi>=0.104.0
     - uvicorn[standard]>=0.24.0
     - pydantic>=2.0.0
+    - psutil>=5.9.0
